--- a/chat.html
+++ b/chat.html
@@ -31,7 +31,7 @@
           <a href="index.html" class="header__back-btn">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <h1 class="class header__title">株式会社スリー・イー</h1>
+          <h1 class="class header__title">HKH</h1>
         </div>
         <div class="class header__header-column">
           <span class="header__icon">
@@ -48,34 +48,34 @@
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, 6 December, 2019</span>
         <li class="incoming-message message">
-          <img src="image/rio.jpg" class="g-avatar message" />
+          <img src="image/hkh.png" class="g-avatar message" />
           <div class="message__content">
-            <span class="message__author">株式会社スリー・イー</span>
+            <span class="message__author">HKH</span>
             <div class="message__bubble">
-              おめでとうございます。
+              오늘 영복이네 C&C??
             </div>
           </div>
         </li>
         <li class="sent-message message">
           <div class="message__content">
             <div class="message__bubble">
-              どうもありがとうございます。
+              ㅇㅇ
             </div>
           </div>
         </li>
         <li class="incoming-message message">
-          <img src="image/rio.jpg" class="g-avatar message" />
+          <img src="image/hkh.png" class="g-avatar message" />
           <div class="message__content">
-            <span class="message__author">株式会社スリー・イー</span>
+            <span class="message__author">HKH</span>
             <div class="message__bubble">
-              おめでとうございます。
+              끝나고 맥주?
             </div>
           </div>
         </li>
         <li class="sent-message message">
           <div class="message__content">
             <div class="message__bubble">
-              どうもありがとうございます。
+              ㄴㄴ 다이어트해야됨
             </div>
           </div>
         </li>
