--- a/friends.html
+++ b/friends.html
@@ -43,13 +43,13 @@
       <header class="friends__header">
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="image/rio.jpg" class="g-avatar friend__avatar" />
+            <img src="image/ikh.png" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Park Youngbok
+                IKH
               </span>
               <span class="friend__status">
-                Be Happy!
+                178cm / 80kg
               </span>
             </div>
           </div>
@@ -59,10 +59,10 @@
         <h5 class="friends__title">Plus Friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="image/rio.jpg" class="friend__avatar" />
+            <img src="image/lani.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Plus Friend
+                라니
               </span>
             </div>
           </div>
@@ -73,13 +73,42 @@
         <h5 class="friends__title">Friends 3</h5>
         <li class="friends__friend friend friend">
           <div class="friend__column">
+            <img src="image/hkh.png" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                HKH
+              </span>
+              <span class="friend__status">
+                임균 다이어트 ㄱㄱ
+              </span>
+            </div>
+          </div>
+          
+        </li>
+
+        <li class="friends__friend friend friend">
+          <div class="friend__column">
+            <img src="image/ikh.png" class="friend__avatar" />
+            <div class="friend__content">
+              <span class="friend__name">
+                IKH365
+              </span>
+              <span class="friend__status">
+                소개팅시켜줘
+              </span>
+            </div>
+          </div>
+                  </li>
+
+        <li class="friends__friend friend friend">
+          <div class="friend__column">
             <img src="image/rio.jpg" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Park Youngbok
+                영복
               </span>
               <span class="friend__status">
-                Be Happy!
+                얘들아 공부하자
               </span>
             </div>
           </div>
@@ -93,6 +122,12 @@
             </div>
           </div>
         </li>
+
+
+
+
+
+
       </ul>
     </main>
     <nav class="nav">
