--- a/find.html
+++ b/find.html
@@ -81,10 +81,10 @@
         </h5>
         <li class="find__friend friend friend">
           <div class="friend__column">
-            <img src="image/rio.jpg" class="friend__avatar" />
+            <img src="image/dol.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                Park Youngbok
+                돌이
               </span>
             </div>
           </div>
