--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
           <a href="chat.html">
             <div class="chats_chat friend friend--lg">
               <div class="friend__column">
-                <img src="image/rio.jpg" class="m-avatar friend__avatar" />
+                <img src="image/hkh.png" class="m-avatar friend__avatar" />
                 <div class="friend__content">
                   <span class="friend__name">
-                    My friend
+                    HKH
                   </span>
                   <span class="friend__bottom-text">
-                    Going Home.
+                    ㅇㅇ
                   </span>
                 </div>
               </div>
