--- a/chat.html
+++ b/chat.html
@@ -31,7 +31,7 @@
           <a href="index.html" class="header__back-btn">
             <i class="fas fa-arrow-left"></i>
           </a>
-          <h1 class="class header__title">HKH</h1>
+          <h1 class="class header__title">달인</h1>
         </div>
         <div class="class header__header-column">
           <span class="header__icon">
@@ -48,34 +48,34 @@
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, 6 December, 2019</span>
         <li class="incoming-message message">
-          <img src="image/hkh.png" class="g-avatar message" />
+          <img src="image/yoo.png" class="g-avatar message" />
           <div class="message__content">
-            <span class="message__author">HKH</span>
+            <span class="message__author">달인</span>
             <div class="message__bubble">
-              오늘 영복이네 C&C??
+              송아지 오늘 맥주?
             </div>
           </div>
         </li>
         <li class="sent-message message">
           <div class="message__content">
             <div class="message__bubble">
-              ㅇㅇ
+              애기랑 놀아줘라
             </div>
           </div>
         </li>
         <li class="incoming-message message">
-          <img src="image/hkh.png" class="g-avatar message" />
+          <img src="image/yoo.png" class="g-avatar message" />
           <div class="message__content">
             <span class="message__author">HKH</span>
             <div class="message__bubble">
-              끝나고 맥주?
+              오늘 와이프 애기랑 친정갔어
             </div>
           </div>
         </li>
         <li class="sent-message message">
           <div class="message__content">
             <div class="message__bubble">
-              ㄴㄴ 다이어트해야됨
+              콜
             </div>
           </div>
         </li>
