--- a/friends.html
+++ b/friends.html
@@ -43,10 +43,10 @@
       <header class="friends__header">
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img src="image/ikh.png" class="g-avatar friend__avatar" />
+            <img src="image/song.png" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                IKH
+                ZZIHUN
               </span>
               <span class="friend__status">
                 178cm / 80kg
@@ -62,7 +62,7 @@
             <img src="image/lani.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                라니
+                멍멍이
               </span>
             </div>
           </div>
@@ -73,13 +73,13 @@
         <h5 class="friends__title">Friends 3</h5>
         <li class="friends__friend friend friend">
           <div class="friend__column">
-            <img src="image/hkh.png" class="friend__avatar" />
+            <img src="image/yoo.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                HKH
+                달인
               </span>
               <span class="friend__status">
-                임균 다이어트 ㄱㄱ
+                애보기 힘들다
               </span>
             </div>
           </div>
@@ -88,13 +88,13 @@
 
         <li class="friends__friend friend friend">
           <div class="friend__column">
-            <img src="image/ikh.png" class="friend__avatar" />
+            <img src="image/song.png" class="friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                IKH365
+                ZZIHUN
               </span>
               <span class="friend__status">
-                소개팅시켜줘
+                178 cm / 80kg
               </span>
             </div>
           </div>
