--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           <a href="chat.html">
             <div class="chats_chat friend friend--lg">
               <div class="friend__column">
-                <img src="image/hkh.png" class="m-avatar friend__avatar" />
+                <img src="image/yoo.png" class="m-avatar friend__avatar" />
                 <div class="friend__content">
                   <span class="friend__name">
-                    HKH
+                    달인
                   </span>
                   <span class="friend__bottom-text">
                     ㅇㅇ
