--- a/chat.html
+++ b/chat.html
@@ -48,27 +48,27 @@
       <ul class="chat__messages">
         <span class="chat__timestamp">Friday, 6 December, 2019</span>
         <li class="incoming-message message">
-          <img src="image/yoo.png" class="g-avatar message" />
+          <img src="image/bogle.png" class="g-avatar message" />
           <div class="message__content">
-            <span class="message__author">달인</span>
+            <span class="message__author">존보글</span>
             <div class="message__bubble">
-              송아지 오늘 맥주?
+              하늘아 우리 리오한테 뭐 사주지?
             </div>
           </div>
         </li>
         <li class="sent-message message">
           <div class="message__content">
             <div class="message__bubble">
-              애기랑 놀아줘라
+              저는 바이킹스워프 쏘려구요
             </div>
           </div>
         </li>
         <li class="incoming-message message">
-          <img src="image/yoo.png" class="g-avatar message" />
+          <img src="image/bogle.png" class="g-avatar message" />
           <div class="message__content">
             <span class="message__author">HKH</span>
             <div class="message__bubble">
-              오늘 와이프 애기랑 친정갔어
+              그럼 난 돈으로 줘야겠다
             </div>
           </div>
         </li>
