--- a/index.html
+++ b/index.html
@@ -47,20 +47,20 @@
           <a href="chat.html">
             <div class="chats_chat friend friend--lg">
               <div class="friend__column">
-                <img src="image/yoo.png" class="m-avatar friend__avatar" />
+                <img src="image/bogle.png" class="m-avatar friend__avatar" />
                 <div class="friend__content">
                   <span class="friend__name">
-                    달인
+                    존보글
                   </span>
                   <span class="friend__bottom-text">
-                    ㅇㅇ
+                    그럼 난 돈으로 줘야겠다
                   </span>
                 </div>
               </div>
               <div class="friend__column">
                 <div class="friend_now-listening">
                   <span class="chat__timestamp">
-                    March 8
+                    어제
                   </span>
                 </div>
               </div>
