--- a/more.html
+++ b/more.html
@@ -46,13 +46,13 @@
       <header class="more_header">
         <div class="friends__friend friend friend">
           <div class="friend__column">
-            <img src="image/song.png" class="g-avatar friend__avatar" />
+            <img src="image/sky.png" class="g-avatar friend__avatar" />
             <div class="friend__content">
               <span class="friend__name">
-                ZZIHUN
+                하늘
               </span>
               <span class="friend__status">
-                song@lycos.co.kr
+                sky@naver.com
               </span>
             </div>
           </div>
